--- a/backend/package.json
+++ b/backend/package.json
@@ -5,9 +5,9 @@
   "main": "src/server.js",
   "type": "module",
   "scripts": {
-    "start": "node src/server.js",
-    "dev": "nodemon src/server.js",
-    "seed": "node src/seed.js"
+        "build": "cd ../frontend && npm install && npm run build && cd ../backend",
+    "start": "npm run build && node src/server.js",
+        "dev": "nodemon src/server.js",
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
